Add barcode to dishes, improve handling of id sequences in DB